fix leaks with class constants (bug #24699)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@136056 c90b9560-bf6c-de11-be94-00142212c4b1